# web_shop_html

./: config.py  main.py  pyproject.toml
html_pages/: catalog_page.html  category_1_page.html  contacts.html  home_page.html
